<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_10"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/statusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/statusFilter"
        android:layout_width="@dimen/spinner_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:entries="@array/statuses"
        app:layout_constraintBottom_toBottomOf="@id/statusTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/speciesTitle"
        app:layout_constraintTop_toTopOf="@id/statusTitle" />

    <TextView
        android:id="@+id/genderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statusTitle" />

    <Spinner
        android:id="@+id/genderFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:entries="@array/genders"
        app:layout_constraintBottom_toBottomOf="@id/genderTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/speciesTitle"
        app:layout_constraintTop_toTopOf="@id/genderTitle" />

    <TextView
        android:id="@+id/speciesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/species"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderTitle" />

    <Spinner
        android:id="@+id/speciesFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:entries="@array/species"
        app:layout_constraintBottom_toBottomOf="@id/speciesTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/speciesTitle"
        app:layout_constraintTop_toTopOf="@id/speciesTitle" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:enabled="true"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speciesFilter" />
</androidx.constraintlayout.widget.ConstraintLayout>