<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_card_view"
    android:layout_marginTop="@dimen/margin_card_view"
    android:layout_marginEnd="@dimen/margin_card_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/personageImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_top"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/name"
            android:textColor="@color/rick_and_morty_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personageImage" />

        <TextView
            android:id="@+id/personageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:textColor="@color/rick_and_morty_text_data_color"
            app:layout_constraintStart_toStartOf="@+id/nameTV"
            app:layout_constraintTop_toBottomOf="@+id/nameTV"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/speciesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/species"
            android:textColor="@color/rick_and_morty_text_color"
            app:layout_constraintStart_toStartOf="@+id/nameTV"
            app:layout_constraintTop_toBottomOf="@+id/personageName" />

        <TextView
            android:id="@+id/personageSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_top"
            android:textColor="@color/rick_and_morty_text_data_color"
            app:layout_constraintBaseline_toBaselineOf="@+id/speciesTV"
            app:layout_constraintStart_toEndOf="@+id/speciesTV"
            tools:text="@string/species" />

        <TextView
            android:id="@+id/statusTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/status"
            android:textColor="@color/rick_and_morty_text_color"
            app:layout_constraintStart_toStartOf="@+id/speciesTV"
            app:layout_constraintTop_toBottomOf="@+id/speciesTV" />

        <TextView
            android:id="@+id/personageStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/rick_and_morty_text_data_color"
            app:layout_constraintBaseline_toBaselineOf="@+id/statusTV"
            app:layout_constraintStart_toStartOf="@+id/personageSpecies"
            tools:text="@string/status" />

        <TextView
            android:id="@+id/genderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/gender"
            android:textColor="@color/rick_and_morty_text_color"
            app:layout_constraintStart_toStartOf="@+id/statusTV"
            app:layout_constraintTop_toBottomOf="@+id/statusTV" />

        <TextView
            android:id="@+id/personageGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/rick_and_morty_text_data_color"
            app:layout_constraintBaseline_toBaselineOf="@+id/genderTV"
            app:layout_constraintStart_toStartOf="@+id/personageStatus"
            tools:text="@string/gender" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>